Update BMRA image and pip version for CentOS7
This change updates the BMRA image to v21.03 and
the pip version to the recommended one.

Change-Id: I28b69fcb105cac05fbcc2d4606714c9fd9be0cc4
Signed-off-by: Rihab Banday <rihab.banday@ericsson.com>
Reviewed-on: https://gerrit.opnfv.org/gerrit/c/kuberef/+/72438
Tested-by: jenkins-ci <jenkins-opnfv-ci@opnfv.org>
Reviewed-by: Michael Pedersen <michaelx.pedersen@intel.com>

--- a/sw_config/bmra/patched_rhel_packages.yml
+++ b/sw_config/bmra/patched_rhel_packages.yml
@@ -224,3 +224,11 @@
      - jq
     state: present
   when: ansible_distribution in ["RedHat", "CentOS"]
+
+- name: use the correct pip version for CentOS 7
+  pip:
+    name:
+      - pip==9.0.3
+  when:
+    - ansible_distribution == "CentOS"
+    - ansible_distribution_version < '7.9'
