Rename cnf_conformance -> cnf_testsuite
It conforms with the disruptive upstream change [1]

[1] https://github.com/cncf/cnf-testsuite

Signed-off-by: Cédric Ollivier <cedric.ollivier@orange.com>
Change-Id: I6d6fc47b9567d7185ccb142cdb6c18161941ad1b
Reviewed-on: https://gerrit.opnfv.org/gerrit/c/kuberef/+/72476
Tested-by: jenkins-ci <jenkins-opnfv-ci@opnfv.org>
Reviewed-by: Rihab Banday <rihab.banday@ericsson.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -297,7 +297,7 @@ helm_vims:
   script:
     - run_tests -t helm_vims -p -r
 
-cnf_conformance:
+cnf_testsuite:
   only:
     - schedules
   tags:
@@ -305,7 +305,7 @@ cnf_conformance:
   stage: functest-kubernetes-cnf
   image: opnfv/functest-kubernetes-cnf:v1.19
   script:
-    - run_tests -t cnf_conformance -p -r
+    - run_tests -t cnf_testsuite -p -r
 
 zip:
   only:
