Update workaround for python cachetools
Adds conditional to install cachetools v3.1.1 on Centos 7 (Python 2) and v4.2.1 in other cases

Signed-off-by: Michael S. Pedersen <michaelx.pedersen@intel.com>
Change-Id: I6fa648f228c7d12f1d5dedbf75ff96be3257ef62

--- a/sw_config/bmra/patched_packages.yml
+++ b/sw_config/bmra/patched_packages.yml
@@ -36,7 +36,7 @@
     name:
       - jmespath==0.9.5
       - ruamel.yaml==0.16.13
-      - cachetools==3.1.1
+      - cachetools=="{{ (ansible_os_family == 'RedHat' and ansible_distribution_version < '8') | ternary('3.1.1', '4.2.1') }}"
       - openshift==0.11.2
     state: present
   register: pip_result
