Add netperf in Kuberef gates
It has been backported to v1.19.

Signed-off-by: Cédric Ollivier <cedric.ollivier@orange.com>
Change-Id: I24cd90c05c991d75f0b5f8e0ad188b47ed99dd86
Reviewed-on: https://gerrit.opnfv.org/gerrit/c/kuberef/+/72504
Tested-by: jenkins-ci <jenkins-opnfv-ci@opnfv.org>
Reviewed-by: Rihab Banday <rihab.banday@ericsson.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -277,6 +277,16 @@ xrally_kubernetes_full:
   script:
     - run_tests -t xrally_kubernetes_full -p -r
 
+netperf:
+  only:
+    - schedules
+  tags:
+    - intel-pod19-docker
+  stage: functest-kubernetes-benchmarking
+  image: opnfv/functest-kubernetes-benchmarking:v1.19
+  script:
+    - run_tests -t netperf -p -r
+
 k8s_vims:
   only:
     - schedules
