Add initial config to support deployments on VMs
* Add initial version of PDF and IDF that
will be consumed by the hardware provisioner used in
Kuberef to bring up libvirt VMs (for now 2 VMs for dev purposes).
* Add deploy_on_vms.sh script to deploy Kuberef on VMs
* Add new functions referenced by the deploy_on_vms.sh
script - these can be merged with existing functions

This has been tested on Ubuntu 18.04 baremetal server.

The BMRA section of the templates will be modified later once the
BMRA testing on VMs is complete.

Change-Id: I95a5e85cdab95befd24a1cae9f367b32ce26621e
Signed-off-by: Rihab Banday <rihab.banday@ericsson.com>

--- a/deploy.env
+++ b/deploy.env
@@ -1,7 +1,13 @@
 # Define environment variables
 
+# Vendor name - some examples are listed under kuberef/hw_config
 export VENDOR=${VENDOR:-intel}
+
+# OS to be installed on target hosts
+# Currently centos7 and ubuntu1804 are supported
 export DISTRO=${DISTRO:-centos7}
+
+# k8s provisioiner details
 export INSTALLER=bmra
 export BMRA_PROFILE=$(yq r $CURRENTPATH/hw_config/$VENDOR/idf.yaml bmra.profile)
 
