Pin current version of infra engine framework
This patch adds a specific commit id of the infra
engine to avoid fetching latest changes from
the master branch which may affect the deployments.

Signed-off-by: Rihab Banday <rihab.banday@ericsson.com>
Change-Id: I042f144f09db2cfa51f7a488a78426ebfabe65be

--- a/deploy.env
+++ b/deploy.env
@@ -11,6 +11,9 @@ export DEPLOYMENT=${DEPLOYMENT:-full}
 # Name of host bridge to which the VM is connected to (used for PXE)
 export BRIDGE=pxebr
 
+# Specific infra engine SHA to avoid fetching latest master changes
+export ENGINE_COMMIT_ID=${ENGINE_COMMIT_ID:-08325937}
+
 # Jump VM details
 export VM_NAME=$(yq r $CURRENTPATH/hw_config/$VENDOR/pdf.yaml jumphost.name)
 export USERNAME=${USERNAME:-ubuntu}
