--- a/sw_config/bmra/patched_packages.yml
+++ b/sw_config/bmra/patched_packages.yml
@@ -35,6 +35,7 @@
   pip:
     name:
       - jmespath==0.9.5
+      - ruamel.yaml.clib==0.2.2
       - ruamel.yaml==0.16.13
       - cachetools=={{ (ansible_os_family == 'RedHat' and ansible_distribution_version < '8') | ternary('3.1.1', '4.2.1') }}
       - openshift==0.11.2
