Align license headers with REUSE guidelines
This patch applies a consistent use of license and copyright
headers to all source files according to the guidelines of
REUSE.

Signed-off-by: Georg Kunz <georg.kunz@ericsson.com>
Change-Id: I8973efe304e8fb03ad0861d4b8356221d898d548

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 Anuket contributors
+#
+# SPDX-License-Identifier: Apache-2.0
+
 ---
 # GitLab CI config file to deploy RI2 on baremetal infra
 # and run RC2 compliance tests on the deployed platform.
