--- a/.rstcheck.cfg
+++ b/.rstcheck.cfg
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 Anuket Contributors
+#
+# SPDX-License-Identifier: Apache-2.0
+
 [rstcheck]
 report=warning
 ignore_substitutions=today
