--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,7 @@
+; SPDX-FileCopyrightText: 2021 Anuket contributors
+;
+; SPDX-License-Identifier: Apache-2.0
+
 [tox]
 minversion = 3.5
 skipsdist = True
