--- a/deploy.env
+++ b/deploy.env
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 Anuket contributors
+#
+# SPDX-License-Identifier: Apache-2.0
+
 # Define environment variables
 
 export VENDOR=${VENDOR:-intel}
