--- a/inventory/localhost.ini
+++ b/inventory/localhost.ini
@@ -1,3 +1,7 @@
+; SPDX-FileCopyrightText: 2021 Anuket contributors
+;
+; SPDX-License-Identifier: Apache-2.0
+
 [all:vars]
 ansible_ssh_extra_args=' -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
 
