--- a/playbooks/roles/bootstrap/tasks/main.yaml
+++ b/playbooks/roles/bootstrap/tasks/main.yaml
@@ -1,11 +1,8 @@
 ---
-##############################################################################
-# Copyright (c) Ericsson AB and others
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Apache License, Version 2.0
-# which accompanies this distribution, and is available at
-# http://www.apache.org/licenses/LICENSE-2.0
-##############################################################################
+
+# SPDX-FileCopyrightText: 2021 Ericsson AB and others
+#
+# SPDX-License-Identifier: Apache-2.0
 
 # collected PDF and IDF are copied into group_vars
 # folder in order to ensure we have single PDF and IDF
