--- a/playbooks/roles/pre-install/molecule/default/molecule.yml
+++ b/playbooks/roles/pre-install/molecule/default/molecule.yml
@@ -1,12 +1,9 @@
 ---
-# SPDX-license-identifier: Apache-2.0
-##############################################################################
-# Copyright (c) 2020 Samsung Electronics
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Apache License, Version 2.0
-# which accompanies this distribution, and is available at
-# http://www.apache.org/licenses/LICENSE-2.0
-##############################################################################
+
+# SPDX-FileCopyrightText: 2021 Samsung Electronics
+#
+# SPDX-License-Identifier: Apache-2.0
+
 dependency:
   name: galaxy
 driver:
