--- a/sw_config/bmra/ansible.cfg
+++ b/sw_config/bmra/ansible.cfg
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 Anuket Contributors
+#
+# SPDX-License-Identifier: Apache-2.0
+
 [ssh_connection]
 pipelining=True
 ssh_args = -o ControlMaster=auto -o ControlPersist=30m -o ConnectionAttempts=100 -o UserKnownHostsFile=/dev/null -o ServerAliveInterval=60 -o ServerAliveCountMax=10
