--- a/sw_config/bmra/dockerhub_credentials/tasks/main.yml
+++ b/sw_config/bmra/dockerhub_credentials/tasks/main.yml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 Anuket contributors
+#
+# SPDX-License-Identifier: Apache-2.0
+
 ---
 - name: Add Docker hub credentials on target nodes
   docker_login:
