Updates Kuberef to use BMRA v21.08
Updates BMRA tag to v21.08
Updates Kuberef templates for BMRA configuration
Updates idf.yml (hw_config) to match changes to BMRA
Adds new and updated BMRA patches
Fixes a few bugs in functions.sh

Signed-off-by: Michael S. Pedersen <michaelx.pedersen@intel.com>
Change-Id: Ifbd4d60af76dac45e49145f00cbeb90de0f7c719

--- a/hw_config/ericsson-pod1/idf.yaml
+++ b/hw_config/ericsson-pod1/idf.yaml
@@ -81,9 +81,9 @@ bmra:
 #    qat:
 #      - name: crypto01
 #        pci: "0000:ab:00.0"
-#        mod_type: qat_c62x
 #        pci_type: c6xx
 #        vfs: 4
+  runtime: docker # 'docker' and 'containerd' supported
   features:
     sriov:
       enable: false
@@ -94,8 +94,7 @@ bmra:
     hugepages:
       enable: false
       default: 2M
-      hugepages_1G: 0
-      hugepages_2M: 10240
+      amount: 10240
     isolcpus:
       enable: true
       autogenerate: true
