--- a/sw_config/bmra/patched_packages.yml
+++ b/sw_config/bmra/patched_packages.yml
@@ -19,7 +19,7 @@
       - setuptools<=44
     extra_args: --upgrade
 
-#pinned python package versions
+#pinned python packages versions
 - name: install Python packages
   pip:
     name:
@@ -27,7 +27,12 @@
       - ruamel.yaml.clib==0.2.2
       - ruamel.yaml==0.16.13
       - cachetools=={{ (ansible_os_family == 'RedHat' and ansible_distribution_version < '8') | ternary('3.1.1', '4.2.1') }}
+      - markupsafe==1.1.1
+      - jinja2==2.11.3
       - openshift==0.11.2
+      - six>=1.15.0
+      - websocket-client==0.58.0
+      - oauthlib==3.1.0
     state: present
   register: pip_result
   retries: 5
