--- a/INFO.yaml
+++ b/INFO.yaml
@@ -8,10 +8,10 @@ project_creation_date: '2020-07-08'
 project_category: ''
 lifecycle_state: 'Incubation'
 project_lead: &opnfv_kuberef_ptl
-    name: 'Rihab Banday'
-    email: 'rihab.banday@ericsson.com'
-    company: 'Ericsson'
-    id: 'rihabbanday'
+    name: 'Dan Xu'
+    email: 'xudan16@huawei.com'
+    company: 'Huawei'
+    id: 'xudan'
 primary_contact: *opnfv_kuberef_ptl
 issue_tracking:
     type: 'jira'
@@ -53,10 +53,10 @@ committers:
       email: 'michaelx.pedersen@intel.com'
       company: 'Intel'
       id: 'pedersex'
-    - name: 'Victor Morales'
-      email: 'v.morales@samsung.com'
-      company: 'Samsung'
-      id: 'electrocucaracha'
+    - name: 'Rihab Banday'
+      email: 'rihab.banday@ericsson.com'
+      company: 'Ericsson'
+      id: 'rihabbanday'
 tsc:
     # yamllint disable rule:line-length
     approval: 'https://lists.opnfv.org/g/opnfv-tsc/message/6210'
