Fix pip3 version issues
The latest pipelines have been failing due to issues
caused by an older version of pip3 while setting up DPDK
in CentOS 7 based deployments. This patch includes an update
to fix it.

Signed-off-by: Rihab Banday <rihab.banday@ericsson.com>
Change-Id: Ie338adaa4908850af25dc65a551b62549d431f81
Reviewed-on: https://gerrit.opnfv.org/gerrit/c/kuberef/+/73224
Tested-by: jenkins-ci <jenkins-opnfv-ci@opnfv.org>
Reviewed-by: Georg Kunz <georg.kunz@ericsson.com>
Reviewed-by: Michael Pedersen <michaelx.pedersen@intel.com>

--- a/sw_config/bmra/patched_rhel_packages.yml
+++ b/sw_config/bmra/patched_rhel_packages.yml
@@ -281,12 +281,20 @@
       - pip==9.0.3
   when:
     - ansible_distribution == "CentOS"
-    - ansible_distribution_version < '7.9'
+    - ansible_distribution_version < '8'
 
-- name: Install pip3 required by dpdk
+- name: Remove older version of pip3 which causes dpdk setup tasks to fail
   yum:
     name: python3-pip
-    state: latest
+    state: absent
   when:
     - ansible_distribution == "CentOS"
-    - ansible_distribution_version < '7.9'
+    - ansible_distribution_version < '8'
+
+- name: Install new version of pip3 required by dpdk tasks
+  yum:
+    name: python3-pip
+    state: present
+  when:
+    - ansible_distribution == "CentOS"
+    - ansible_distribution_version < '8'
