--- a/deploy.env
+++ b/deploy.env
@@ -29,3 +29,6 @@ export VM_NAME=$(yq r $CURRENTPATH/hw_config/$VENDOR/pdf.yaml jumphost.name)
 export USERNAME=${USERNAME:-ubuntu}
 export PROJECT_ROOT="${PROJECT_ROOT:-/home/ubuntu}"
 export ROOT_PASSWORD="root" # This is used for throubleshooting purposes
+
+# Set to true to show more detailed debug level logs
+export DEBUG=false
