Fix bug of loading wrong PDF and IDF files Also fix another tiny bug
Signed-off-by: xudan16 <xudan16@huawei.com>
Change-Id: I0ec0837b60110fc6af6bd49c6e5c9564dc38adc2

--- a/playbooks/roles/jump-vm/tasks/main.yaml
+++ b/playbooks/roles/jump-vm/tasks/main.yaml
@@ -89,9 +89,9 @@
 
 - name: define jump VM
   command: "virt-install --connect qemu:///system --name {{ jumphost.name }} \
-              --ram 8192 --vcpus=8 --os-type linux --os-variant ubuntu16.04 \
-              --disk path={{ workspace }}/kuberef-jump.qcow2,format=qcow2 \
-              --disk {{ workspace }}/kuberef-jump-cidata.iso,device=cdrom \
+              --ram 8192 --vcpus=8 --os-type linux --os-variant ubuntu18.04 \
+              --disk path={{ workspace }}/{{ jumphost.name }}.qcow2,format=qcow2 \
+              --disk {{ workspace }}/{{ jumphost.name }}-cidata.iso,device=cdrom \
               --network network=default,model=virtio,mac='{{ jumphost.interfaces[engine.net_config[engine.public_network].interface].mac_address }}' \
               {{ '--network bridge=pxebr,model=rtl8139,mac=' + jumphost.interfaces[engine.net_config[engine.pxe_network].interface].mac_address if deployment_type == 'full' else '' }} \
               --import --noautoconsole"
