Fix some issues and simplify the installation
Issue-ID: KUB-66
Signed-off-by: zhuguanyu <zhuguanyu5@huawei.com>
Change-Id: I4a01396deb7f555290d856e81d35ac69b046cda7

--- a/sw_config/bmra/patched_k8s.yml
+++ b/sw_config/bmra/patched_k8s.yml
@@ -20,7 +20,7 @@
   any_errors_fatal: true
 
 - hosts: all
-  gather_facts: false
+  gather_facts: true
   tasks:
     - name: prepare additional kubespray facts
       set_fact:
