--- a/tox.ini
+++ b/tox.ini
@@ -5,13 +5,13 @@
 [tox]
 minversion = 3.5
 skipsdist = True
-envlist = lint,docs
+envlist = lint,docs,docs-linkcheck
 
 [testenv]
 passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 
 [testenv:lint]
-deps =
+-deps =
    -r{toxinidir}/test-requirements.txt
 whitelist_externals = bash
 commands = bash -c "find {toxinidir} \
@@ -25,12 +25,12 @@ commands = bash -c "find {toxinidir} \
    -name \*.rst | xargs rstcheck"
 
 [testenv:docs]
-deps = -rdocs/requirements.txt
+deps = -r{toxinidir}/docs/requirements.txt
 commands =
     sphinx-build -b html -n -d {envtmpdir}/doctrees ./docs/ {toxinidir}/docs/_build/html
     echo "Generated docs available in {toxinidir}/docs/_build/html"
 whitelist_externals = echo
 
 [testenv:docs-linkcheck]
-deps = -rdocs/requirements.txt
+deps = -r{toxinidir}/docs/requirements.txt
 commands = sphinx-build -b linkcheck -d {envtmpdir}/doctrees ./docs/ {toxinidir}/docs/_build/linkcheck
