--- a/tox.ini
+++ b/tox.ini
@@ -5,32 +5,18 @@
 [tox]
 minversion = 3.5
 skipsdist = True
-envlist = lint,docs
+envlist = docs,docs-linkcheck
 
 [testenv]
 passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 
-[testenv:lint]
-deps =
-   -r{toxinidir}/test-requirements.txt
-whitelist_externals = bash
-commands = bash -c "find {toxinidir} \
-   -not -path {toxinidir}/.tox/\* \
-   -not -path {toxinidir}/.venv/\* \
-# E006 check for lines longer than 79 columns
-   -name \*.sh | xargs bashate -v -iE006"
-   bash -c "yamllint {toxinidir}"
-   bash -c "find {toxinidir} \
-   -not -path {toxinidir}/.tox/\* \
-   -name \*.rst | xargs rstcheck"
-
 [testenv:docs]
-deps = -rdocs/requirements.txt
+deps = -r{toxinidir}/docs/requirements.txt
 commands =
     sphinx-build -b html -n -d {envtmpdir}/doctrees ./docs/ {toxinidir}/docs/_build/html
     echo "Generated docs available in {toxinidir}/docs/_build/html"
 whitelist_externals = echo
 
 [testenv:docs-linkcheck]
-deps = -rdocs/requirements.txt
+deps = -r{toxinidir}/docs/requirements.txt
 commands = sphinx-build -b linkcheck -d {envtmpdir}/doctrees ./docs/ {toxinidir}/docs/_build/linkcheck
