Change gitlab deploy pod tag to be unh-ri2-pod1
Switch the gitlab pipeline pod to be unh-ri2-pod1.
Change the env in deploy.env to be unh to use the
pdf anf idf of unh pod1.

Signed-off-by: xudan16 <xudan16@huawei.com>
Change-Id: Id69e8daeca69d3327919efaaa2a8d9fabb3569d4

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ stages:
 
 deploy:
   tags:
-    - intel-pod19-shell
+    - unh-ri2-pod1
   stage: deploy_platform
   script:
     - bash deploy.sh
