--- a/deploy.env
+++ b/deploy.env
@@ -5,7 +5,7 @@
 # Define environment variables
 
 # Vendor name - some examples are listed under kuberef/hw_config
-export VENDOR=${VENDOR:-intel}
+export VENDOR=${VENDOR:-unh}
 
 # OS to be installed on target hosts
 # Currently centos7 and ubuntu1804 are supported
